--- a/portfolio/web/src/pages/contact.astro
+++ b/portfolio/web/src/pages/contact.astro
@@ -38,7 +38,7 @@ const seoData = {
                         <ul class="social-links">
                             <li>
                                 <a
-                                    href="https://linkedin.com/in/mathieupiton"
+                                    href="https://fr.linkedin.com/in/mathieu-piton"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     aria-label="LinkedIn"
