--- a/portfolio/web/src/pages/index.astro
+++ b/portfolio/web/src/pages/index.astro
@@ -7,7 +7,7 @@ const seoData = {
     ...defaultSEO,
     title: "Mathieu Piton - Développeur Web",
     description:
-        "Portfolio de Mathieu Piton, développeur web spécialisé en Rust et technologies modernes",
+        "Portfolio de Mathieu Piton, développeur web spécialisé en Node.js",
 };
 ---
 
